# MemX

./: .gitignore  CMakeLists.txt  README.md
Example/: CMakeLists.txt  main.cpp
MemX/: CMakeLists.txt  Config.h
MemX/Adapter/: Adapter.cpp  Adapter.h
MemX/Common/Types/: Type.h
MemX/Common/WinApi/: ArchitectureApi.h  NtError.h  NtResult.h  WinHeaders.h
MemX/Process/: Process.cpp  Process.h  ProcessCore.cpp  ProcessCore.h  ProcessMemory.cpp  ProcessMemory.h
